--- a/ml.html
+++ b/ml.html
@@ -33,7 +33,7 @@ body{font-family:"Poppins",sans-serif;background:linear-gradient(135deg,#D6F1FF,
 
 <body>
 
-<h2 class="section-title">📊 Machine Learning Progress</h2>
+<h2 class="section-title">📊 Machine Learning Validation</h2>
 
 <div class="grid">
   <div class='img-card'><img src='images/WhatsApp Image 2025-12-04 at 6.17.40 PM.jpeg' onclick="openModal(this.src)"><p>Silicosis Heatmap</p></div>
